--- a/p1/pom.xml
+++ b/p1/pom.xml
@@ -245,6 +245,7 @@
 			<artifactId>sitemesh</artifactId>
 			<version>${sitemesh.version}</version>
 		</dependency> -->
+		<!-- Deprecated -->
 		<dependency>
 			<groupId>displaytag</groupId>
 			<artifactId>displaytag</artifactId>
