--- a/p1/src/main/webapp/WEB-INF/web.xml
+++ b/p1/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- https://www.mkyong.com/web-development/the-web-xml-deployment-descriptor-examples/ -->
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+		 version="3.1">
 
 	<display-name>p1</display-name>
 
@@ -15,108 +15,84 @@
 		<param-value>classpath:application-context*.xml</param-value>
 	</context-param>
 
-<!-- 
-about async-supported
-http://stackoverflow.com/questions/20643970/asyncsupported-exception-when-switch-from-jetty-1-7-to-1-9 -->
+<!-- about async-supported
+https://stackoverflow.com/questions/20643970/asyncsupported-exception-when-switch-from-jetty-7-to-jetty-9 -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <async-supported>true</async-supported>
+		<async-supported>true</async-supported>
 	</filter>
 
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
-        <async-supported>true</async-supported>
+		<async-supported>true</async-supported>
 	</filter>
-    <filter>
-        <filter-name>struts-prepare</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareFilter</filter-class>
-        <async-supported>true</async-supported>
-    </filter>
-    <filter>
-        <filter-name>struts-execute</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.filter.StrutsExecuteFilter</filter-class>
-        <async-supported>true</async-supported>
-    </filter>
+	<filter>
+		<filter-name>struts-prepare</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareFilter</filter-class>
+		<async-supported>true</async-supported>
+	</filter>
+	<filter>
+		<filter-name>struts-execute</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.filter.StrutsExecuteFilter</filter-class>
+		<async-supported>true</async-supported>
+	</filter>
 	<filter>
 		<filter-name>sitemesh</filter-name>
 		<filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
-        <async-supported>true</async-supported>
+		<async-supported>true</async-supported>
 	</filter>
-	
-	<!-- https://github.com/alexcheng1982/server-sent-events-sample -->
-    <filter>
-        <filter-name>continuation</filter-name>
-        <filter-class>org.eclipse.jetty.continuation.ContinuationFilter</filter-class>
-        <async-supported>true</async-supported>
-    </filter>
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-    <filter-mapping>
-        <filter-name>struts-prepare</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<filter-mapping>
+		<filter-name>struts-prepare</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>sitemesh</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
-        <filter-name>struts-execute</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <!-- 1.Struts的sample是用上面的方式。
-    2.如果出现错误The Struts dispatcher cannot be found.(Unhandled exception occurred whilst decorating page)的话，用struts2会返回空白的500页面。
+		<filter-name>struts-execute</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- 1.Struts的sample是用上面的方式。
+	2.如果出现错误The Struts dispatcher cannot be found.(Unhandled exception occurred whilst decorating page)的话，用struts2会返回空白的500页面。
 	<filter-mapping>
-        <filter-name>struts2</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-     -->
-     
-    <filter-mapping>
-        <filter-name>continuation</filter-name>
-        <url-pattern>/sse/*</url-pattern>
-    </filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	 -->
 
-    <!-- 也可以用http://directwebremoting.org/dwr/documentation/server/integration/spring.html#dwrSpringServlet -->
+	<!-- 也可以用http://directwebremoting.org/dwr/documentation/server/integration/spring.html#dwrSpringServlet -->
 	<servlet>
-	  <display-name>DWR Servlet</display-name>
-	  <servlet-name>dwr-invoker</servlet-name>  
-	  <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
-	  <init-param>
-	     <param-name>debug</param-name>
-	     <param-value>true</param-value>
-	  </init-param>
+		<display-name>DWR Servlet</display-name>
+		<servlet-name>dwr-invoker</servlet-name>
+		<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
+		<init-param>
+			<param-name>debug</param-name>
+			<param-value>true</param-value>
+		</init-param>
 	</servlet>
 
 	<servlet-mapping>
 	  <servlet-name>dwr-invoker</servlet-name>
 	  <url-pattern>/dwr/*</url-pattern>
 	</servlet-mapping>
-	
-    <!-- https://github.com/jetty-project/jetty-eventsource-servlet/wiki 后改用WebServlet注解
+
+	<!-- http://www.madbit.org/blog/programming/168/make-servlets-with-spring/
+	http://blogs.sourceallies.com/2012/02/injecting-spring-beans-into-java-servlets/
+	因为这样通过sprint创建的servlet不执行init方法，在application-context.xml中的bean里加上init-method="init"，也会有其他问题。所以放弃。
 	<servlet>
-        <servlet-name>eventSourceServlet</servlet-name>
-        <servlet-class>info.yinhua.web.jetty.UserEventSourceServlet</servlet-class>
-        <async-supported>true</async-supported>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>eventSourceServlet</servlet-name>
-        <url-pattern>/sse/*</url-pattern>
-    </servlet-mapping>
-     -->
-    <!-- http://www.madbit.org/blog/programming/168/make-servlets-with-spring/
-    http://blogs.sourceallies.com/2012/02/injecting-spring-beans-into-java-servlets/
-    因为这样通过sprint创建的servlet不执行init方法，在application-context.xml中的bean里加上init-method="init"，也会有其他问题。所以放弃。
-    <servlet>
-        <servlet-name>eventSourceServlet</servlet-name>
-        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-        <async-supported>true</async-supported>
-    </servlet> -->
+		<servlet-name>eventSourceServlet</servlet-name>
+		<servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+		<async-supported>true</async-supported>
+	</servlet> -->
 
 	<!--
 	 spring配置
@@ -132,7 +108,7 @@ http://stackoverflow.com/questions/20643970/asyncsupported-exception-when-switch
 		<session-timeout>10</session-timeout>
 	</session-config>
 
-    <!-- displaytag
+	<!-- displaytag
 	<jsp-config>
 		<taglib>
 			<taglib-uri>http://displaytag.sf.net</taglib-uri>
@@ -143,28 +119,28 @@ http://stackoverflow.com/questions/20643970/asyncsupported-exception-when-switch
 			<taglib-location>/WEB-INF/tld/displaytag-el.tld</taglib-location>
 		</taglib>
 	</jsp-config>
-     -->
-    
+	 -->
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>default.html</welcome-file>
 	</welcome-file-list>
 
 <!-- return 403 -->
-    <security-constraint>
-        <display-name>No direct JSP access</display-name>
-        <web-resource-collection>
-            <web-resource-name>No-JSP</web-resource-name>
-            <url-pattern>*.jsp</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>no-users</role-name>
-        </auth-constraint>
-    </security-constraint>
-    <security-role>
-        <description>Don't assign users to this role</description>
-        <role-name>no-users</role-name>
-    </security-role>
+	<security-constraint>
+		<display-name>No direct JSP access</display-name>
+		<web-resource-collection>
+			<web-resource-name>No-JSP</web-resource-name>
+			<url-pattern>*.jsp</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>no-users</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-role>
+		<description>Don't assign users to this role</description>
+		<role-name>no-users</role-name>
+	</security-role>
 
 	<error-page>
 		<error-code>403</error-code>
