--- a/p1/pom.xml
+++ b/p1/pom.xml
@@ -22,17 +22,10 @@
 	</properties>
 
 	<dependencies>
-		<!-- 以下四个包和版本参考jetty安装目录jetty/lib/ -->
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.3.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>javax.servlet.jsp.jstl</artifactId>
-			<version>1.2.2</version>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>apache-jsp</artifactId>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -47,6 +40,41 @@
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-impl</artifactId>
+			<version>1.2.5</version>
+			<scope>provided</scope>
+		</dependency><!--
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>request</artifactId>
+			<version>1.0.1</version>
+			<scope>test</scope>
+		</dependency> -->
+		<!-- jetty needs commons-pool, dependency of commons-dbcp
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.6</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
@@ -76,18 +104,7 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>requirejs</artifactId>
 			<version>2.3.5</version>
-		</dependency>
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency><!-- 
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>request</artifactId>
-			<version>1.0.1</version>
-			<scope>test</scope>
-		</dependency>
+		</dependency><!--
 		<dependency>
 			<groupId>com.github.sebhoss</groupId>
 			<artifactId>common-annotations</artifactId>
@@ -98,7 +115,6 @@
 			<artifactId>struts2-core</artifactId>
 			<version>${struts.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
@@ -138,22 +154,7 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<version>1.8.9</version>
-		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>1.8.9</version>
-		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjtools</artifactId>
-			<version>1.8.9</version>
-		</dependency>
-		<!-- 
+		<!--
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -174,7 +175,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- 
+		<!--
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -193,18 +194,6 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.176</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
-			<scope>compile</scope>
-		</dependency>
-		<!-- jetty needs commons-pool, dependency of commons-dbcp -->
-		<dependency>
-			<groupId>commons-pool</groupId>
-			<artifactId>commons-pool</artifactId>
-			<version>1.5.4</version>
-		</dependency>
 		<!-- use new version
 		<dependency>
 			<groupId>log4j</groupId>
@@ -216,13 +205,13 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency> -->
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		<!-- 
+		<!--
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
@@ -231,7 +220,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0-rc2</version>
+			<version>26.0-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -321,7 +310,7 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring-security.version}</version>
 		</dependency>
-		<!-- 
+		<!--
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
@@ -343,6 +332,21 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-jcl</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>1.8.9</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -368,7 +372,7 @@
 		<defaultGoal>package</defaultGoal>
 		<plugins>
 			<!-- <suffix>.min</suffix> -->
-			<!-- YUI Compressor Maven压缩插件 
+			<!-- YUI Compressor Maven压缩插件
 			http://alchim.sourceforge.net/yuicompressor-maven-plugin/
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
@@ -387,7 +391,7 @@
 					<encoding>UTF-8</encoding>
 					<jswarn>false</jswarn>
 					<force>false</force>
-					<nosuffix>true</nosuffix> 
+					<nosuffix>true</nosuffix>
 					<linebreakpos>-1</linebreakpos>
 					<includes>
 						<include>**/*.js</include>
