--- a/p1/pom.xml
+++ b/p1/pom.xml
@@ -12,8 +12,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<jetty.version>9.4.11.v20180605</jetty.version>
+		<maven.compiler.source>1.8</maven.compiler.source> 
+		<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+		<jetty.version>9.4.12.v20180830</jetty.version>
 		<struts.version>2.5.2</struts.version>
 		<springframework.version>4.2.2.RELEASE</springframework.version>
 		<spring-security.version>4.0.3.RELEASE</spring-security.version>
@@ -414,8 +415,13 @@
 			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.2</version>
 			</plugin>
 		</plugins>
 	</build>
