--- a/p1/pom.xml
+++ b/p1/pom.xml
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>requirejs</artifactId>
-			<version>2.3.5</version>
+			<version>2.3.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -103,12 +103,12 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>datatables</artifactId>
-			<version>1.10.19</version>
+			<version>1.10.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
-			<version>0.34</version>
+			<version>0.40</version>
 		</dependency><!--
 		<dependency>
 			<groupId>com.github.sebhoss</groupId>
@@ -422,6 +422,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webApp>
+						<contextPath>/p1</contextPath>
+					</webApp>
+					<httpConnector>
+						<port>8071</port>
+					</httpConnector>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
